Hotfix: Fix the gaps between footer sections in mobile

--- a/assets/sass/styles.scss
+++ b/assets/sass/styles.scss
@@ -759,10 +759,15 @@ h1, h2, h3, h4 {
 
     .section__content {
       flex-direction: column-reverse;
+      gap: 0;
     }
 
     .footer__left {
       gap: 0;
+    }
+
+    .footer__right {
+      margin-bottom: 15px;
     }
 
     .footer__logo img {
